fix: fixed css overflow property

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 
 @layer base {
   html {
-    @apply overflow-hidden;
+    @apply overflow-x-hidden;
   }
 
   body {
